--- a/index.htm
+++ b/index.htm
@@ -361,7 +361,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Asa de Henle Ultrafiltrado de Café. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Asa de Henle Ultrafiltrado de Café. Todos los derechos reservados. Impulsed by the 3 luis.</p>
             <p>¡Gracias por visitarnos!</p>
         </footer>
     </div>
