--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
         }
 
         .menu-icon-img {
-            height: 300px;
+            height: 200px;
             width: auto;
             cursor: pointer;
         }
@@ -361,7 +361,8 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Asa de Henle Ultrafiltrado de Café. Todos los derechos reservados. Impulsed by the 3 luis.</p>
+            <p>&copy; 2025 Asa de Henle Ultrafiltrado de Café. Todos los derechos reservados. 
+                Impulsed by the 3 luis.</p>
             <p>¡Gracias por visitarnos!</p>
         </footer>
     </div>
