--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
         }
 
         .menu-icon-img {
-            height: 3000px;
+            height: 150px;
             width: auto;
             cursor: pointer;
         }
@@ -361,7 +361,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Asa de Henle Ultrafiltrado de Café. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Asa de Henle Ultrafiltrado de Café. Todos los derechos reservados. Impuled by the 3 Luis. </p>
             <p>¡Gracias por visitarnos!</p>
         </footer>
     </div>
